Added accuracy progress reports

--- a/landmark_train.ipynb
+++ b/landmark_train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b7a47719",
+   "id": "78aea33b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8829379",
+   "id": "bc4eeceb",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3713fb8",
+   "id": "01e8c13f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c33946b3",
+   "id": "576c492b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "536d5d98",
+   "id": "dd2a46f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13e31953",
+   "id": "b1dfeb80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2826f129",
+   "id": "f903c845",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,52 @@
       "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n",
       "/Users/arnavgangal/anaconda3/envs/cs224n/lib/python3.12/site-packages/torch/nn/functional.py:1347: UserWarning: dropout2d: Received a 2-D input to dropout2d, which is deprecated and will result in an error in a future release. To retain the behavior and silence this warning, please use dropout instead. Note that dropout2d exists to provide channel-wise dropout on inputs with 2 spatial dimensions, a channel dimension, and an optional batch dimension (i.e. 3D or 4D inputs).\n",
       "  warnings.warn(warn_msg)\n",
-      "Epoch 1/10 Training:  35%|██▊     | 501/1439 [06:43<13:33,  1.15it/s, loss=1.53]"
+      "Epoch 1/10 Training: 100%|██████| 1439/1439 [19:34<00:00,  1.23it/s, loss=0.918]\n",
+      "Epoch 1/10 Validation: 100%|██| 309/309 [03:40<00:00,  1.40it/s, val_loss=0.222]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training loss: 0.918, Validation loss: 0.222\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10 Training: 100%|██████| 1439/1439 [19:25<00:00,  1.23it/s, loss=0.327]\n",
+      "Epoch 2/10 Validation: 100%|█| 309/309 [03:38<00:00,  1.41it/s, val_loss=0.0994]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Training loss: 0.327, Validation loss: 0.099\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10 Training: 100%|██████| 1439/1439 [19:26<00:00,  1.23it/s, loss=0.234]\n",
+      "Epoch 3/10 Validation: 100%|█| 309/309 [03:38<00:00,  1.41it/s, val_loss=0.0674]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Training loss: 0.234, Validation loss: 0.067\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10 Training:  26%|█▊     | 367/1439 [05:20<22:27,  1.26s/it, loss=0.187]"
      ]
     }
    ],
@@ -264,22 +309,24 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "\n",
-    "# Training loop\n",
+    "# Training loop with accuracy calculation\n",
     "num_epochs = 10\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
+    "    correct_predictions = 0\n",
+    "    total_predictions = 0\n",
     "    train_progress_bar = tqdm(train_loader, desc=f'Epoch {epoch + 1}/{num_epochs} Training')\n",
     "\n",
     "    for data in train_progress_bar:\n",
     "        grayscale_images, color_images, labels = data\n",
-    "        \n",
+    "\n",
+    "        # Move data to the device\n",
     "        grayscale_images = grayscale_images.to(device)\n",
     "        color_images = color_images.to(device)\n",
     "        labels = labels.to(device)\n",
     "\n",
-    "        # Process color images with MediaPipe\n",
+    "        # Process color images to extract landmarks\n",
     "        landmarks = process_with_mediapipe(color_images)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -289,38 +336,56 @@
     "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
-    "        train_progress_bar.set_postfix({'loss': running_loss / (train_progress_bar.n + 1)})\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        correct_predictions += (predicted == labels).sum().item()\n",
+    "        total_predictions += labels.size(0)\n",
+    "\n",
+    "        train_progress_bar.set_postfix({\n",
+    "            'loss': running_loss / (train_progress_bar.n + 1),\n",
+    "            'accuracy': correct_predictions / total_predictions\n",
+    "        })\n",
     "\n",
     "    # Validation step\n",
     "    model.eval()\n",
     "    val_loss = 0.0\n",
+    "    val_correct_predictions = 0\n",
+    "    val_total_predictions = 0\n",
     "    val_progress_bar = tqdm(val_loader, desc=f'Epoch {epoch + 1}/{num_epochs} Validation')\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for data in val_progress_bar:\n",
     "            grayscale_images, color_images, labels = data\n",
-    "            \n",
+    "\n",
+    "            # Move data to the device\n",
     "            grayscale_images = grayscale_images.to(device)\n",
     "            color_images = color_images.to(device)\n",
     "            labels = labels.to(device)\n",
     "\n",
-    "            # Process color images with MediaPipe\n",
-    "            color_images = process_with_mediapipe(color_images)\n",
+    "            # Process color images to extract landmarks\n",
+    "            landmarks = process_with_mediapipe(color_images)\n",
     "\n",
-    "            outputs = model(grayscale_images, color_images)\n",
+    "            outputs = model(grayscale_images, landmarks)\n",
     "            loss = criterion(outputs, labels)\n",
     "            val_loss += loss.item()\n",
-    "            val_progress_bar.set_postfix({'val_loss': val_loss / (val_progress_bar.n + 1)})\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            val_correct_predictions += (predicted == labels).sum().item()\n",
+    "            val_total_predictions += labels.size(0)\n",
     "\n",
-    "    print(f'Epoch {epoch + 1}, Training loss: {running_loss / len(train_loader):.3f}, Validation loss: {val_loss / len(val_loader):.3f}')\n",
+    "            val_progress_bar.set_postfix({\n",
+    "                'val_loss': val_loss / (val_progress_bar.n + 1),\n",
+    "                'val_accuracy': val_correct_predictions / val_total_predictions\n",
+    "            })\n",
     "\n",
-    "print('Finished Training')\n"
+    "    print(f'Epoch {epoch + 1}, Training loss: {running_loss / len(train_loader):.3f}, Training accuracy: {correct_predictions / total_predictions:.3f}, Validation loss: {val_loss / len(val_loader):.3f}, Validation accuracy: {val_correct_predictions / val_total_predictions:.3f}')\n",
+    "\n",
+    "print('Finished Training')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d86d52a",
+   "id": "0017341a",
    "metadata": {},
    "outputs": [],
    "source": [
