data augmentation yippee

--- a/Image preprocessing.ipynb
+++ b/Image preprocessing.ipynb
@@ -2,21 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "14c36778",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:12.989995Z",
+     "start_time": "2024-06-02T04:53:12.963799Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "from PIL import Image, ImageFilter\n",
-    "import numpy as np"
+    "from PIL import Image, ImageFilter, ImageOps\n",
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "c42fd108",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:13.133977Z",
+     "start_time": "2024-06-02T04:53:13.123903Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_image_size(image_path):\n",
@@ -26,9 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "dc9420a9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:13.295285Z",
+     "start_time": "2024-06-02T04:53:13.286431Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def check_image_sizes(directory, output_file):\n",
@@ -56,9 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "ab600ec7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.551813Z",
+     "start_time": "2024-06-02T04:53:13.455227Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -81,9 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "06ddc2f8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.551995Z",
+     "start_time": "2024-06-02T04:53:28.550730Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def apply_custom_sharpen(image):\n",
@@ -109,9 +135,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
+   "outputs": [],
+   "source": [
+    "def add_salt_and_pepper_noise(image, amount=0.05, salt_vs_pepper=0.5):\n",
+    "    \"\"\"\n",
+    "    Adds salt and pepper noise to an image.\n",
+    "    \n",
+    "    Args:\n",
+    "        image (PIL.Image): Input image.\n",
+    "        amount (float): Proportion of image pixels to replace with noise.\n",
+    "        salt_vs_pepper (float): Proportion of salt noise relative to pepper noise.\n",
+    "    \n",
+    "    Returns:\n",
+    "        PIL.Image: Image with salt and pepper noise added.\n",
+    "    \"\"\"\n",
+    "    image_array = np.array(image)\n",
+    "    row, col = image_array.shape\n",
+    "    num_salt = np.ceil(amount * image_array.size * salt_vs_pepper)\n",
+    "    num_pepper = np.ceil(amount * image_array.size * (1.0 - salt_vs_pepper))\n",
+    "\n",
+    "    # Add salt noise (white pixels)\n",
+    "    coords = [np.random.randint(0, i - 1, int(num_salt)) for i in image_array.shape]\n",
+    "    image_array[coords[0], coords[1]] = 1\n",
+    "\n",
+    "    # Add pepper noise (black pixels)\n",
+    "    coords = [np.random.randint(0, i - 1, int(num_pepper)) for i in image_array.shape]\n",
+    "    image_array[coords[0], coords[1]] = 0\n",
+    "\n",
+    "    return Image.fromarray(image_array)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564185Z",
+     "start_time": "2024-06-02T04:53:28.554319Z"
+    }
+   },
+   "id": "6cfac7c651a84b37"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [],
+   "source": [
+    "def random_rotation(image, angle_range=(-10, 10)):\n",
+    "    \"\"\"Applies a random rotation to the image within the specified angle range.\"\"\"\n",
+    "    angle = random.uniform(angle_range[0], angle_range[1])\n",
+    "    return image.rotate(angle)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564389Z",
+     "start_time": "2024-06-02T04:53:28.556374Z"
+    }
+   },
+   "id": "9895b87ae6ff2325"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "def random_zoom(image, zoom_range=(0.9, 1.1)):\n",
+    "    \"\"\"Applies a random zoom to the image.\"\"\"\n",
+    "    zoom_factor = random.uniform(zoom_range[0], zoom_range[1])\n",
+    "    width, height = image.size\n",
+    "    new_width, new_height = int(width * zoom_factor), int(height * zoom_factor)\n",
+    "    image = image.resize((new_width, new_height), Image.LANCZOS)\n",
+    "    if zoom_factor < 1:\n",
+    "        # Pad the image\n",
+    "        pad_width = (width - new_width) // 2\n",
+    "        pad_height = (height - new_height) // 2\n",
+    "        image = ImageOps.expand(image, (pad_width, pad_height, width - new_width - pad_width, height - new_height - pad_height), fill=0)\n",
+    "    else:\n",
+    "        # Crop the image\n",
+    "        left = (new_width - width) // 2\n",
+    "        top = (new_height - height) // 2\n",
+    "        image = image.crop((left, top, left + width, top + height))\n",
+    "    return image"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564462Z",
+     "start_time": "2024-06-02T04:53:28.557944Z"
+    }
+   },
+   "id": "46b5e72d8ad801d7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "def random_shift(image, width_shift_range=0.1, height_shift_range=0.1):\n",
+    "    \"\"\"Applies a random width and height shift to the image.\"\"\"\n",
+    "    width, height = image.size\n",
+    "    max_width_shift = int(width * width_shift_range)\n",
+    "    max_height_shift = int(height * height_shift_range)\n",
+    "    width_shift = random.randint(-max_width_shift, max_width_shift)\n",
+    "    height_shift = random.randint(-max_height_shift, max_height_shift)\n",
+    "    return image.transform(image.size, Image.AFFINE, (1, 0, width_shift, 0, 1, height_shift), resample=Image.BICUBIC)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564543Z",
+     "start_time": "2024-06-02T04:53:28.561048Z"
+    }
+   },
+   "id": "9a67e53723ebc23b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [],
+   "source": [
+    "def random_horizontal_flip(image):\n",
+    "    \"\"\"Randomly flips the image horizontally.\"\"\"\n",
+    "    if random.random() < 0.5:\n",
+    "        image = ImageOps.mirror(image)\n",
+    "    return image"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.564881Z",
+     "start_time": "2024-06-02T04:53:28.562908Z"
+    }
+   },
+   "id": "a6e6f722681f3f95"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "def random_crop(image, crop_size=(50, 50)):\n",
+    "    \"\"\"Randomly crops the image to the specified size.\"\"\"\n",
+    "    width, height = image.size\n",
+    "    new_width, new_height = crop_size\n",
+    "    left = random.randint(0, width - new_width)\n",
+    "    top = random.randint(0, height - new_height)\n",
+    "    return image.crop((left, top, left + new_width, top + new_height))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.567901Z",
+     "start_time": "2024-06-02T04:53:28.564574Z"
+    }
+   },
+   "id": "64d36ad7963a787a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "d557e260",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.570079Z",
+     "start_time": "2024-06-02T04:53:28.568111Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
@@ -128,14 +316,23 @@
     "    # Open image and convert to grayscale\n",
     "    image = Image.open(image_path).convert('L')\n",
     "    \n",
+    "    #data augmentation\n",
+    "    image = random_rotation(image)\n",
+    "    image = random_zoom(image)\n",
+    "    image = random_shift(image)\n",
+    "    image = random_horizontal_flip(image)\n",
+    "    \n",
     "    # Resize the image to 50x50 pixels\n",
     "    resized_image = image.resize((50, 50))\n",
     "    \n",
     "    # Apply the custom sharpening filter\n",
     "    sharpened_image = apply_custom_sharpen(resized_image)\n",
     "    \n",
+    "    #add salt and pepper noise \n",
+    "    noisy_image = add_salt_and_pepper_noise(sharpened_image)\n",
+    "    \n",
     "    # Normalize the pixel values to the range [0, 1]\n",
-    "    normalized_image = np.array(sharpened_image) / 255.0\n",
+    "    normalized_image = np.array(noisy_image) / 255.0\n",
     "    \n",
     "    # Convert back to an image format\n",
     "    return Image.fromarray((normalized_image * 255).astype(np.uint8))"
@@ -143,9 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "075923fb",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:53:28.587615Z",
+     "start_time": "2024-06-02T04:53:28.571576Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def process_directory(input_dir, output_dir):\n",
@@ -181,16 +383,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "6fe47aac",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T04:54:55.032951Z",
+     "start_time": "2024-06-02T04:53:28.573354Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hehehe finished\n"
+     ]
+    }
+   ],
    "source": [
     "input_directory = 'dataset5'\n",
     "output_directory = 'dataset5_preprocessed_50x50'\n",
     "process_directory(input_directory, output_directory)\n",
     "print(\"hehehe finished\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "48d5f2a6a8fb7ff9"
   }
  ],
  "metadata": {
